--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,18 +5,8 @@
 {% endblock %}
 
 {% block code %}
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script type="text/javascript" charset="utf-8">
     
-    var gRemote = 'http://' + document.domain + ':' + location.port;
-    var gSocket = io.connect(gRemote);
-    var gSocketConnected = false;
-
-    gSocket.on('connect', function() {
-        console.log("connected to " + gRemote);
-        gSocketConnected = true;
-    });
-
     const KEY_LEFT_ARROW = 37;
     const KEY_UP_ARROW = 38;
     const KEY_RIGHT_ARROW = 39;
@@ -35,10 +25,14 @@
                 keyCode == KEY_RIGHT_ARROW || keyCode == KEY_DOWN_ARROW) {
             var keyName = KEY_CODE_NAMES[keyCode];
             console.log(keyName + " pressed.");
-            if (gSocketConnected) {
-                console.log("emiting event to the server.");
-                gSocket.emit("steer", keyName);
-            }
+
+            $.ajax("/steer/" + keyName)
+             .done(function() {
+                 console.log("Sent " + keyName);
+             })
+             .error(function(e) {
+                 console.log("Error: " + e);
+             });
         }
     };
 
